k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-nodejs-app
  labels:
    app: devsu-nodejs
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: devsu-nodejs
  template:
    metadata:
      labels:
        app: devsu-nodejs
    spec:
      containers:
      - name: devsu-nodejs
        image: devsu-nodejs-app:latest 
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 8000
        resources: 
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
