k8s/03-service-hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-nodejs-service
spec:
  selector:
    app: devsu-nodejs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
