k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devsu-demo.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-nodejs-service
            port:
              number: 80
